--- a/reports/report_20251209.html
+++ b/reports/report_20251209.html
@@ -39,7 +39,7 @@
                                 <div class="hero-title">Intelligence Core</div>
                                 <div class="badge">
                                     <span class="badge-label">Active Regime</span>
-                                    <span class="badge-value">WAITING</span>
+                                    <span class="badge-value">UNKNOWN</span>
                                 </div>
                                 <div class="badge">
                                     <span class="badge-label">Win Rate</span>
